2006-09-27  Nurdin Premji <npremji@redhat.com>

	* Makefile.am: Added getopt

2006-09-19    <swagiaal@redhat.com>

	* Makefile.am (GEN_GCJ_LDADD): Added -laudit

2006-09-11  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (EXTRA_DIST): Replace frysk_suite.sh with
	frysk_suite.py.
	(frysk/gui/test/dogtail_scripts/frysk_suite.py): Ditto for rule.

2006-09-08	Alexandre Oliva  <aoliva@redhat.com>

	* Makefile.am (GEN_GCJ_LDADD): Link in libunwind-ptrace.a.
    * Makefile.in: Rebuild.

2006-08-17  Yao Qi  <qiyaoltc@cn.ibm.com>

	* Makefile.am : Append -lbfd_get to GEN_GCJ_LDADD.

2006-08-14  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (TESTS_ENVIRONMENT): Skip the dogtail tests.

2006-08-08  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (TESTS_ENVIRONMENT): Add a comment.

2006-07-21  Nurdin Premji  <npremji@redhat.com>

	* .cvsignore: Ignoring
	config.guess
	config.sub

2006-07-12  Rick Moseley <rmoseley@redhat.com>

	* Makefile.am: Remove libunwind-ptrace.a.

2006-07-11  Rick Moseley <rmoseley@redhat.com>

	* Makefile.am: Remove generic libunwind.a lib.

2006-07-10  Rick Moseley  <rmoseley@redhat.com>

	* Makefile.am: Remove libunwind-setjmp.a for now.

2006-06-30  Stepan Kasal  <kasal@ucw.cz>

	* configure.ac: Include common/acinclude.m4 before AM_INIT_AUTOMAKE.
	* Makefile.am (GEN_GCJ_LDADD): Add libunwind libs.

2006-06-25  Ivan Pantuyev  <ipantuye@redhat.com>

	* Makefile.am: Added jline to classpath

2006-06-23  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am: Distribute frysk/gui/test/dogtail_scripts/frysk_suite.in.

2006-06-16  Andrew Cagney  <cagney@redhat.com>

	* Makefile.am (GEN_GCJ_LDADD): Specify static elfutil libraries,
	re-order and add libebl/libebl.a.

2006-06-16  Phil Muldoon  <pmuldoon@redhat.com>

	* Makefile.am: Added noinst_SCRIPTS for
	test-suite shell file generation.
	Added corresponding CLEANFILES statement.

2006-06-15  Stepan Kasal  <kasal@ucw.cz>

	* Makefile.am (noinst_PROGRAMS): remove .../frysk_suite.sh; shell